[gd_scene load_steps=24 format=3 uid="uid://botai66n8rwt3"]

[ext_resource type="Texture2D" uid="uid://b3gj1j73p318" path="res://addons/top_down/assets/images/shadow.png" id="1_1xdx7"]
[ext_resource type="Script" path="res://addons/nezvers_library/nodes/ResourceNode/ResourceNode.gd" id="1_atd7g"]
[ext_resource type="Script" path="res://addons/top_down/scripts/damage/DamageReceiver.gd" id="1_mvxhy"]
[ext_resource type="Texture2D" uid="uid://8liwj4r4bj4m" path="res://addons/top_down/assets/images/characters/plumber_16x16_strip8.png" id="1_s6o32"]
[ext_resource type="Script" path="res://addons/nezvers_library/nodes/AreaTransmitter/AreaReceiver2D.gd" id="1_vf4rt"]
[ext_resource type="Script" path="res://addons/nezvers_library/nodes/ResourceNode/ResourceNodeItem.gd" id="2_riryq"]
[ext_resource type="Material" uid="uid://b5gtwnsevpxxj" path="res://addons/top_down/resources/materials/color_flash.material" id="3_jdhuu"]
[ext_resource type="Script" path="res://addons/top_down/scripts/pickups/HealthReceiver.gd" id="3_mreek"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/PushResource.gd" id="3_q65r3"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/MoverTopDown2D.gd" id="5_3rf64"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/SpriteFlip.gd" id="8_7uvby"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/CharacterState.gd" id="9_caq0j"]
[ext_resource type="Script" path="res://addons/top_down/scripts/damage/ActorDamage.gd" id="10_tpsh5"]
[ext_resource type="Resource" uid="uid://byppueuo3drya" path="res://addons/top_down/resources/sounds/damage.tres" id="11_wwbua"]
[ext_resource type="Script" path="res://addons/top_down/scripts/actor/ItemDrop.gd" id="14_b0amg"]
[ext_resource type="Script" path="res://addons/nezvers_library/resources/ValueResource/StringArrayResource.gd" id="15_loiow"]

[sub_resource type="Resource" id="Resource_xhp0x"]
resource_name = "Push Resource"
script = ExtResource("3_q65r3")
version = 0
not_saved = false

[sub_resource type="Resource" id="Resource_ltyge"]
resource_name = "push"
script = ExtResource("2_riryq")
resource = SubResource("Resource_xhp0x")
make_unique = true

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qpkoi"]
size = Vector2(8, 4)

[sub_resource type="Animation" id="Animation_itq31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blend")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_tledj"]
resource_name = "flash"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blend")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.500001, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("..:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.5, 1),
"update": 0,
"values": [Vector2(0.75, 1.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbujk"]
_data = {
"RESET": SubResource("Animation_itq31"),
"flash": SubResource("Animation_tledj")
}

[sub_resource type="Resource" id="Resource_mslt1"]
script = ExtResource("15_loiow")
value = Array[String](["res://addons/top_down/scenes/pickups/health_pickup.tscn"])
version = 0
not_saved = false

[node name="Actor" type="CharacterBody2D"]
motion_mode = 1
platform_on_leave = 2
platform_floor_layers = 0

[node name="ResourceNode" type="Node" parent="."]
script = ExtResource("1_atd7g")
list = Array[ExtResource("2_riryq")]([SubResource("Resource_ltyge")])

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qpkoi")

[node name="AreaReceiver2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
monitoring = false
script = ExtResource("1_vf4rt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaReceiver2D"]
shape = SubResource("RectangleShape2D_qpkoi")

[node name="DamageReceiver" type="Node" parent="AreaReceiver2D" node_paths=PackedStringArray("area_receiver", "receiver_owner")]
script = ExtResource("1_mvxhy")
area_receiver = NodePath("..")
receiver_owner = NodePath("../..")

[node name="HealthReceiver" type="Node" parent="AreaReceiver2D" node_paths=PackedStringArray("area_receiver", "damage_receiver")]
script = ExtResource("3_mreek")
area_receiver = NodePath("..")
damage_receiver = NodePath("../DamageReceiver")

[node name="Shadow" type="Sprite2D" parent="."]
modulate = Color(0.0196078, 0.0352941, 0.0784314, 0.454902)
texture = ExtResource("1_1xdx7")

[node name="Body" type="Node2D" parent="."]

[node name="Stretch" type="Node2D" parent="Body"]

[node name="Sprite2D" type="Sprite2D" parent="Body/Stretch"]
material = ExtResource("3_jdhuu")
position = Vector2(0, -8)
texture = ExtResource("1_s6o32")
hframes = 8

[node name="CharacterAnimator" type="AnimationPlayer" parent="Body/Stretch/Sprite2D"]

[node name="ColorFlash" type="AnimationPlayer" parent="Body/Stretch/Sprite2D"]
libraries = {
"": SubResource("AnimationLibrary_tbujk")
}

[node name="MoverTopDown2D" type="Node2D" parent="." node_paths=PackedStringArray("character", "resource_node")]
script = ExtResource("5_3rf64")
character = NodePath("..")
axis_multiplier = Vector2(1, 0.5)
resource_node = NodePath("../ResourceNode")

[node name="SpriteFlip" type="Node" parent="." node_paths=PackedStringArray("mover_2d", "flip_node")]
script = ExtResource("8_7uvby")
mover_2d = NodePath("../MoverTopDown2D")
flip_node = NodePath("../Body")

[node name="CharacterStates" type="Node" parent="." node_paths=PackedStringArray("mover_2d", "animation_player")]
script = ExtResource("9_caq0j")
mover_2d = NodePath("../MoverTopDown2D")
animation_player = NodePath("../Body/Stretch/Sprite2D/CharacterAnimator")
state = 1

[node name="ActorDamage" type="Node" parent="." node_paths=PackedStringArray("mover", "damage_receiver", "sprite_flip", "flash_animation_player")]
script = ExtResource("10_tpsh5")
mover = NodePath("../MoverTopDown2D")
damage_receiver = NodePath("../AreaReceiver2D/DamageReceiver")
sprite_flip = NodePath("../SpriteFlip")
flash_animation_player = NodePath("../Body/Stretch/Sprite2D/ColorFlash")
flash_animation = &"flash"
sound_resource_damage = ExtResource("11_wwbua")
dead_vfx_parent_path = NodePath("../..")

[node name="ItemDrop" type="Node" parent="." node_paths=PackedStringArray("root_node")]
script = ExtResource("14_b0amg")
root_node = NodePath("..")
asset_list = SubResource("Resource_mslt1")
